# fp-lab4

./: .gitignore  .ocamlformat  CHANGELOG.md  README.md  dune-project  fp_search.opam
.github/workflows/: ci.yml
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/config/: ocaml.config
_opam/.opam-switch/install/: alcotest.changes  astring.changes  cmdliner.changes  dune.changes  fmt.changes  ocaml-base-compiler.changes  ocaml-config.changes  ocaml-syntax-shims.changes  ocaml.changes  ocamlbuild.changes  ocamlfind.changes  re.changes  stdlib-shims.changes  topkg.changes  uutf.changes
_opam/lib/: findlib.conf
_opam/lib/alcotest/: META  alcotest.cma  alcotest.cmi  alcotest.cmt  alcotest.cmti  alcotest.cmx  alcotest.cmxa  alcotest.cmxs  alcotest__.cmi  alcotest__.cmt  alcotest__.cmx  alcotest__.ml  alcotest__Terminal.cmi  alcotest__Terminal.cmt  alcotest__Terminal.cmti  alcotest__Terminal.cmx  dune-package  opam
_opam/lib/astring/: astring.cma  astring.cmi  astring.cmt  astring.cmti  astring.cmx  astring.cmxa  astring.cmxs  astring_base.cmt  astring_base.cmx  astring_char.cmt  astring_char.cmx  astring_escape.cmt  astring_escape.cmx  astring_string.cmt  astring_string.cmx  astring_sub.cmt  astring_sub.cmx  astring_top.cma  astring_top.cmt  astring_top.cmx  astring_top.cmxa  astring_top.cmxs  astring_unsafe.cmt  astring_unsafe.cmx
_opam/lib/cmdliner/: cmdliner.cma  (+42 more)
data/: a.txt  b.txt  c.txt
src/: doc.ml  dune  engine.ml  index.ml  query.ml  store.ml  tokenizer.ml  util.ml
test/: dune  test_fp_search.ml  test_main.ml
(+2299 files in other folders)
